# Ground-Support-Software

./: .gitignore  README.md  _s2InterfaceAutogen.py  anchorPoint.py  dfads  object.py  pyproject.toml  requirements.txt  solenoid.py
Configurations/: 2022-03-24 Avionics Checkouts.json  dummy.json  ectest.json
LaunchFiles/: README.txt  prefs.json
Python/: .pylintrc  2021-08-20 checkouts notes.txt  2021-08-28 RRS Coldflow dataviewer.cfg  2021-08-28 RRS Coldflow.cfg  AbortButton.py  ClientWidget.py  ColorButton.py  DataViewer.py  DataViewerWindow.py  Flash.py  GUI.py  LedIndicatorWidget.py  Limits.py  MathHelper.py  README.md  Switch.py  _s2InterfaceAutogen.py  abort_button.py  anchorPoint.py  auto_manager.py  avionicsObject.py  baseGUI.py  binary_parser.py  board.py  build_launcher.bat  build_launcher.py  campaign.py  campaign2.py  chamber.py  checkValve.py  configurationManager.py  constants.py  controlsPanelWidget.py  controlsSidebarWidget.py  controlsWidget.py  controlsWindow.py  csvHelper.py  csvObjectData.csv  customLabel.py  data.csv  (+68 more)
Python/Configurations/: 1-24-2021 readme.txt  1-24-2021 test notes.txt  2021-08-10-presstest.json  8-18-21 Hotfire Configuration.json  Burst Test 3.json  Coldflow-4-10-2021.json  Coldflow-8-28-21 Dataviewer.cfg  Coldflow-8-28-21 Limits.cfg  Coldflow-8-28-21.json  (+43 more)
python/: ClientWidget.py  _s2InterfaceAutogen.py  board.py  configurationManager.py  controlsWidget.py  controlsWindow.py  customLabel.py  limits.py  missionWidget.py  motor.py  s2Interface.py  server.py  sure.py  tank.py  testScriptS2.py  threeWayValve.py  tube.py
(+72 files in other folders)
